bonus/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: zakariatouzri/test:v3
        name: mywebapp
        ports:
        - containerPort: 80
